--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -1,11 +1,10 @@
-<html>
-<head>
-  <title>Things</title>
-</head>
-<body>
-  <h1>
-    Things
-  </h1>
-  <p>Some stuff about things goes here.</p>
-</body>
-</html>
+<!-- things/templates/home.html -->
+
+{% block content %}
+  <h1>Things</h1>
+  <form method="post" action="{% url 'home' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+  </form>
+{% endblock %}
